# MediaMop

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Pasted text(240).txt  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  compose.yaml  docker-compose.yml  pytest.ini
apps/backend/: .env.example  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: README.md  env.py
apps/backend/tests/: conftest.py  integration_app_runtime_quiesce.py  integration_helpers.py  legacy_refiner_failed_import_env_poison.py  test_activity_stream.py  test_alembic_failed_import_job_identity_migration.py  test_alembic_revision_startup.py  test_arr_failed_import_classification.py  test_arr_failed_import_cleanup_decision.py  test_arr_failed_import_cleanup_policy.py  test_arr_failed_import_env_settings.py  test_arr_failed_import_public_exports.py  test_arr_library_operator_settings_api.py  test_arr_v3_http_security.py  test_auth_api.py  test_auth_service.py  test_bootstrap_status_db_unit.py  test_bootstrap_status_router.py  test_broker_arr_connections_api.py  test_broker_client_registry.py  test_broker_indexers_api.py  test_broker_proxy_api.py  test_broker_result.py  test_broker_search_api.py  test_broker_sync_job_handler.py  test_config_env_parsing.py  test_configuration_bundle_api.py  test_cors_policy.py  test_credentials_secret_crypto.py  test_csrf_unit.py  test_dashboard_status.py  test_db_dep.py  test_docker_onboarding_files.py  test_docker_runtime.py  test_end_to_end_workflows.py  test_failed_import_drive_job_kind_operator_labels.py  (+151 more)
(+930 files in other folders)
