[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mediamop-backend"
version = "1.0.30"
description = "MediaMop backend spine (FastAPI, SQLite, Alembic)"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
  "fastapi>=0.115",
  "python-dotenv>=1.0",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0.40",
  "alembic>=1.14",
  "argon2-cffi>=23.1.0",
  "itsdangerous>=2.1",
  "cryptography>=44.0.0",
  "httpx>=0.27",
  "tzdata>=2025.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "playwright>=1.49.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "bandit>=1.7",
  "pip-audit>=2.7",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mediamop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = false
warn_unused_ignores = false
ignore_errors = true
